--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit",
+    "lint-fix": "eslint --ext .vue src --fix",
     "build": "node build/build.js"
   },
   "dependencies": {
