--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit",
-    "lint-fix": "eslint --ext .vue src --fix",
     "build": "node build/build.js"
   },
   "dependencies": {
@@ -40,11 +39,13 @@
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.15.0",
+    "eslint-config-prettier": "^3.1.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
@@ -58,6 +59,8 @@
     "node-sass": "^4.9.4",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
+    "prettier": "^1.14.3",
+    "prettier-stylelint": "^0.4.2",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
@@ -69,6 +72,7 @@
     "shelljs": "^0.7.6",
     "stylelint": "^9.6.0",
     "stylelint-config-recommended": "^2.1.0",
+    "stylelint-config-prettier": "^4.0.0",
     "stylelint-scss": "^3.3.1",
     "stylelint-order": "^1.0.0",
     "stylelint-webpack-plugin": "^0.10.5",
