--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,22 @@
 {
-  "saveAndRun": {
-    "commands": [
-      {
-        "match": "\\.scss$",
-        "cmd": "stylelint '**/*.scss' --fix"
-      }
-    ]
-  },
+  // "saveAndRun": {
+  //   "commands": [
+  //     {
+  //       "match": "\\.scss$",
+  //       "cmd": "stylelint '**/*.scss' --fix"
+  //     }
+  //   ]
+  // },
+  "prettier.eslintIntegration": true,
   "editor.formatOnSave": true,
+  // "[javascript]": {
+  //   "editor.formatOnSave": false
+  // },
+  // "[vue]": {
+  //   "editor.formatOnSave": false
+  // },
+  "eslint.enable": true,
+  "javascript.validate.enable": false,
   "eslint.autoFixOnSave": true,
   "eslint.alwaysShowStatus": true,
   "eslint.validate": [
@@ -15,13 +24,9 @@
       "language": "vue",
       "autoFix": true
     },
-    //   // {
-    //   //   "language": "html",
-    //   //   "autoFix": false
-    //   // },
     {
       "language": "javascript",
-      "autoFix": true
+      "autoFix": false
     }
   ],
   "vetur.validation.script": false
