stylelint fix on save not using prettier

--- a/.stylelintrc.yml
+++ b/.stylelintrc.yml
@@ -1,4 +1,5 @@
-extends: './node_modules/stylelint-config-recommended'
+extends:
+  - './node_modules/stylelint-config-recommended'
 plugins:
   - './node_modules/stylelint-scss'
   - './node_modules/stylelint-order'
