--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,14 @@
   // "[vue]": {
   //   "editor.formatOnSave": false
   // },
+  "[scss]": {
+    "editor.formatOnSave": false
+  },
   "javascript.validate.enable": false,
+  "css.validate": false,
+  "scss.validate": false,
   "prettier.eslintIntegration": true,
+  "prettier.stylelintIntegration": false,
   "eslint.autoFixOnSave": true,
   "eslint.alwaysShowStatus": true,
   "eslint.validate": [
@@ -20,13 +26,13 @@
       "autoFix": false
     }
   ],
-  "vetur.validation.script": false
-  // "saveAndRun": {
-  //   "commands": [
-  //     {
-  //       "match": "\\.scss$",
-  //       "cmd": "stylelint '**/*.scss' --fix"
-  //     }
-  //   ]
-  // },
+  "vetur.validation.script": false,
+  "saveAndRun": {
+    "commands": [
+      {
+        "match": "\\.scss$",
+        "cmd": "stylelint '**/*.scss' --fix"
+      }
+    ]
+  }
 }
